--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@mui/material": "^7.2.0",
     "@mui/x-data-grid": "^8.7.0",
     "@tailwindcss/vite": "^4.1.11",
-    "@tanstack/react-query": "^5.82.0",
+    "@tanstack/react-query": "^5.84.1",
+    "@tanstack/react-query-devtools": "^5.84.1",
     "axios": "^1.11.0",
     "react": "^19.1.1",
     "react-admin": "^5.9.1",
