--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@hookform/resolvers": "^5.2.1",
     "@material-tailwind/react": "^2.1.10",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
@@ -23,7 +24,8 @@
     "react": "^19.1.1",
     "react-admin": "^5.9.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.7.1"
+    "react-router-dom": "^7.7.1",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
