--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@tanstack/react-query": "^5.84.1",
     "@tanstack/react-query-devtools": "^5.84.1",
     "axios": "^1.11.0",
+    "chart.js": "^4.5.0",
     "react": "^19.1.1",
     "react-admin": "^5.9.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.7.1",
     "yup": "^1.7.0"
