--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.7.1",
+    "react-toastify": "^11.0.5",
     "yup": "^1.7.0"
   },
   "devDependencies": {
